<resources>
    <string name="app_name">神话文字识别</string>
    <string name="string_start">开始</string>
    <string name="string_sure">确定</string>
    <string name="string_cancel">取消</string>
    <string name="string_alert">提示</string>
    <string name="string_do_handle">处理</string>
    <string name="string_rotation">翻转</string>
    <string name="string_chinese">中文</string>
    <string name="string_origin">原图</string>
    <string name="string_heibai">黑白</string>
    <string name="string_gray">灰度化</string>
    <string name="string_binary">二值化</string>
    <string name="text_use_time_format">用时 %s</string>
    <string name="string_invalid_action">无效 Action</string>
    <string name="string_invalid_uri">无效 Uri</string>
    <string name="string_get_file_permission">需要获取文件访问权限,否则该功能无法使用</string>
    <string name="string_null_pic">图片资源为空,操作不能进行</string>
    <string name="string_en_done">已切换为英文模式</string>
    <string name="string_chinese_done">已切换为中文模式</string>
    <string name="string_null_pic_single">图片为空</string>
    <string name="string_pic_not_a888">图片非ARGB_8888格式</string>
    <string name="error_tessdata_folder">Data path must contain subfolder tessdata!</string>
    <string name="string_tess_not_ready">字典文件没有准备好</string>
    <string name="string_clip_done">已复制到剪切板</string>
    <string name="string_choise_intent">请选择一个要分享的应用：</string>
    <string name="string_share_error">不能完成分享</string>
    <string name="string_record_update">记录已更新</string>
    <string name="string_record_saved">数据已保存</string>
    <string name="string_record_not_save">数据未保存</string>
    <string name="string_splash_prepare">正在准备字典文件</string>
    <string name="string_splash_start_copy">开始拷贝字典文件</string>
    <string name="string_splash_param_error">参数错误 params[1] is dest dir.</string>
    <string name="string_splash_copy_error">拷贝字典出错</string>
    <string name="string_splash_copy">检测:</string>
    <string name="string_delete_error">删除失败</string>
    <string name="string_viewer">查看</string>
    <string name="string_delete">删除</string>
    <string name="string_camera_permission">需要获取拍照权限,否则拍照功能无法使用</string>
    <string name="string_need_permission">需要获取用户权限</string>
    <string name="string_camera_unavailable">相机无法使用</string>
    <string name="string_user">用户中心</string>
    <string name="string_history">扫描历史</string>
    <string name="string_setting_user">个人设置</string>
    <string name="string_setting_cache">清除缓存 %s</string>
    <string name="string_setting_delete">删除所有识别记录</string>
    <string name="string_setting_feedback">意见反馈</string>
    <string name="string_setting_feedback_hint">请输入反馈意见</string>
    <string name="string_setting_update">检测更新</string>
    <string name="string_setting_about">关于</string>
    <string name="string_thanks">目前暂未开放,感谢继续关注本产品</string>
    <string name="string_confirm_delete_all">确定要完全删除识别记录吗,删除后无法恢复</string>
    <string name="string_copyright">版权所有 &#169; 2017 神话出品</string>
</resources>
