<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/string_alert"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dialogMsgTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitleTv"
        tools:text="提示消息" />

    <TextView
        android:id="@+id/cancelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/string_cancel"
        app:layout_constraintEnd_toStartOf="@+id/sureTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogMsgTv" />

    <TextView
        android:id="@+id/sureTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/string_sure"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelTv"
        app:layout_constraintTop_toBottomOf="@+id/dialogMsgTv" />

</android.support.constraint.ConstraintLayout>