<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_setting_feedback_hint"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/feedbackEt"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit"
        android:gravity="start|top"
        android:inputType="text"
        android:labelFor="@+id/feedbackEt"
        android:padding="5dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitleTv" />

    <TextView
        android:id="@+id/cancelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/string_cancel"
        app:layout_constraintEnd_toStartOf="@+id/sureTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackEt" />

    <TextView
        android:id="@+id/sureTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/string_sure"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelTv"
        app:layout_constraintTop_toBottomOf="@+id/feedbackEt" />

</android.support.constraint.ConstraintLayout>